--- a/index.html
+++ b/index.html
@@ -5,17 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style and JS-->
-    <link rel="stylesheet" href="style.css">
-    <script type= "text/javascript" src="./js/main.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <script type= "text/javascript" src="./js/app.js"></script>
 
     <title>Quen's Quick Quiz</title>
 </head>
 <body>
     <header>
-
+            <h1>header</h1><!-- logo and nav bar-->
     </header>
-    <main>
+    <main class = "main-container">
+        <div class = "main-item" id="container-1">1</div>
+        <div class = "main-item" id="container-2">
+            <h2> Biography</h2>
+            <p>Text about me</p>
+        </div>
+        <div class = "main-item" id="container-3">3</div>
+        <div class = "main-item" id="container-4">4</div>
+        <div class = "main-item" id="container-5">
+            <h2> Education History</h2>
+            <p>Text about my schooling</p>
+        </div>
+        <div class = "main-item" id="container-6">6</div>
+        <div class = "main-item" id="container-7">7</div>
+        <div class = "main-item" id="container-8">
 
+            <h2> Job Experience</h2>
+            <p>Text about job experience</p>
+
+        </div>
+        <div class = "main-item" id="container-9">9</div>
+        <div class = "main-item" id="container-10">10</div>
+        <div class = "main-item" id="container-11">
+
+            <h2> Job Experience</h2>
+            <p>Text about job experience</p>
+
+        </div>
+        <div class = "main-item" id="container-12">12</div>
     </main>
     <footer>
 
