added sections and placeholder button. centered main header

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="./css/style.css">
     <script type= "text/javascript" src="./js/app.js"></script>
 
-    <title>Quen's Quick Quiz</title>
+    <title>QQQ</title>
 </head>
 <body>
     <header>
-            <h1>header</h1><!-- logo and nav bar-->
+            <h1>Quen's Quick Quiz</h1><!-- logo and nav bar-->
     </header>
     <main class = "main-container">
+        <div class = "main-item" id="container-a">a</div>
+        <div class = "main-item" id="container-b">
+            <h2> Welcome Message via js</h2>
+            <p>welcome text </p>
+        </div>
+        <div class = "main-item" id="container-c">c</div>
         <div class = "main-item" id="container-1">1</div>
         <div class = "main-item" id="container-2">
             <h2> Biography</h2>
@@ -38,11 +44,17 @@
         <div class = "main-item" id="container-10">10</div>
         <div class = "main-item" id="container-11">
 
-            <h2> Job Experience</h2>
-            <p>Text about job experience</p>
+            <h2>Goals i may have</h2>
+            <p>Text about goals i may have</p>
 
         </div>
         <div class = "main-item" id="container-12">12</div>
+        <div class = "main-item" id="container-13">13</div>
+        <div class = "main-item" id="container-14">
+            <h2> button to start quiz here</h2>
+        </div>
+        <div class = "main-item" id="container-15"></div>
+        
     </main>
     <footer>
 
