added initial greeting function

--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
 <body>
     <header>
             <h1>Quen's Quick Quiz</h1><!-- logo and nav bar-->
+            <nav>
+                <ul>
+                    <li>Link 1</li>
+                    <li>Link 2</li>
+                    <li>link 3</li>
+                    <li>link 4</li>
+                </ul>
+            </nav>
     </header>
     <main class = "main-container">
         <div class = "main-item" id="container-a">a</div>
         <div class = "main-item" id="container-b">
-            <h2> Welcome Message via js</h2>
+            <h2 id = "greeting"> <script> document.write(greeting())</script></h2>
             <p>welcome text </p>
         </div>
         <div class = "main-item" id="container-c">c</div>
