added button that runs quiz on click

--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
         <div class = "main-item" id="container-12">12</div>
         <div class = "main-item" id="container-13">13</div>
         <div class = "main-item" id="container-14">
-            <h2> button to start quiz here</h2>
+            <button onclick="quizGame()">
+            <h2>Click For Quiz!</h2>
+            </button>
         </div>
         <div class = "main-item" id="container-15"></div>
-        
     </main>
     <footer>
 
