--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <h1>Quen's Quick Quiz</h1><!-- logo and nav bar-->
             <nav>
                 <ul>
-                    <li class="nav">GitHub</li>
-                    <li class="nav">LinkedIn</li>
-                    <li class="nav">link 3</li>
-                    <li class="nav">link 4</li>
+                    <li class="nav"><a href="https://github.com/QPThree"><img src="./images/github.png"></a></li>
+                    <li class="nav"><a href="https://www.linkedin.com/in/quentin-young-iii/"><img src="./images/linkedin.png"></a></li>
+                    <li class="nav"><a href="https://www.instagram.com/"><img src="./images/instagram.png"></a></li>
+                    <li class="nav"><a href="https://www.twitter.com/"><img src="./images/twitter.png"></a></li>
                 </ul>
             </nav>
     </header>
