updaed linkedin image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Quen's Quick Quiz</h1><!-- logo and nav bar-->
             <nav>
                 <ul>
-                    <li class="nav"><a href="https://github.com/QPThree"><img src="./images/github.png"></a></li>
+                    <li class="nav"><a href="https://github.com/QPThree"><img src="./images/github.png" height= "25px" width="25px"></a></li>
                     <li class="nav"><a href="https://www.linkedin.com/in/quentin-young-iii/"><img src="./images/linkedin.png"></a></li>
                     <li class="nav"><a href="https://www.instagram.com/"><img src="./images/instagram.png"></a></li>
                     <li class="nav"><a href="https://www.twitter.com/"><img src="./images/twitter.png"></a></li>
