updated styling of returned html of high score block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li class="nav"><a href="https://github.com/QPThree"><img src="./images/github.png" height= "25px" width="25px"></a></li>
-                    <li class="nav"><a href="https://www.linkedin.com/in/quentin-young-iii/"><img src="./images/linkedin.png"></a></li>
+                    <li class="nav"><a href="https://www.linkedin.com/in/quentin-young-iii/"><img src="./images/linkedin.png" height= "25px" width="25px"></a></li>
                     <li class="nav"><a href="https://www.instagram.com/"><img src="./images/instagram.png"></a></li>
                     <li class="nav"><a href="https://www.twitter.com/"><img src="./images/twitter.png"></a></li>
                 </ul>
@@ -27,7 +27,8 @@
             <div class = "main-item" id="container-1">
                 <h2 id = "greeting"> <script> document.write(greeting())</script></h2>
                 <p>
-                    Read about me (Quen) in the tiles below.  At the end, try my quiz and see how much you retained!
+                    In the tiles below, read about myself (the author of this page).
+                    Afterwards, take my quiz at the bottom of the page and see what you've retained!
                 </p>
             </div>
             <div class = "main-item" id="container-2">
