--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
             <h1>Quen's Quick Quiz</h1><!-- logo and nav bar-->
             <nav>
-                <ul>
+                <ul class="nav" id = "nav-ul">
                     <li class="nav"><a href="https://github.com/QPThree"><img src="./images/github.png" height= "25px" width="25px"></a></li>
                     <li class="nav"><a href="https://www.linkedin.com/in/quentin-young-iii/"><img src="./images/linkedin.png" height= "25px" width="25px"></a></li>
                     <li class="nav"><a href="https://www.instagram.com/"><img src="./images/instagram.png"></a></li>
@@ -60,12 +60,13 @@
                     <li>Long - Through-hike the Appalachian Trail</li>
                 </ul>
             </div>
+            <div id = "displayResults"></div>
             <div class = "main-item" id="container-6">
                 <button onclick="quizGame()">
                 <h2>Click For Quiz!</h2>
                 </button>
             </div>
-            <div id = "displayResults"></div>
+            
         </div>
     </div>
     </main>
