finally got nav icons to right side of page good lord

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-            <h1>Quen's Quick Quiz</h1><!-- logo and nav bar-->
+            <h1 class = "main-header">Quen's Quick Quiz</h1><!-- logo and nav bar-->
             <nav>
                 <ul class="nav" id = "nav-ul">
                     <li class="nav"><a href="https://github.com/QPThree"><img src="./images/github.png" height= "25px" width="25px"></a></li>
@@ -49,7 +49,7 @@
                 <h2> Job Experience</h2>
                 <ul>
                     <li>US Navy (2013 - 2021) - <em>Aviation Maintenance</em></li>
-                    <li>US Army Research Institute (2013) - <em>Warrior Performance Department</em></li>
+                    <li>US Army Research Institute (2013) - <em>Warfighter Performance Department</em></li>
                 </ul>
             </div>
             <div class = "main-item" id="container-5">
