formatted information bulletpoints

--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
             </div>
             <div class = "main-item" id="container-3">
                 <h2> Education History</h2>
-                <ul>
+                <ul  class = "info">
                     <li>Code Fellows (2021 - 2022)</li>
                     <li>University of New Hampshire (2013) B.S. Kinesiology</li>
                 </ul>
             </div>
             <div class = "main-item" id="container-4">
                 <h2> Job Experience</h2>
-                <ul>
+                <ul class = "info">
                     <li>US Navy (2013 - 2021) - <em>Aviation Maintenance</em></li>
                     <li>US Army Research Institute (2013) - <em>Warfighter Performance Department</em></li>
                 </ul>
             </div>
             <div class = "main-item" id="container-5">
                 <h2>Goals</h2>
-                <ul>
+                <ul class = "info">
                     <li>Short - Complete CF 401 in Python and Java </li>
                     <li>Mid - Get paid for creating software</li>
                     <li>Long - Through-hike the Appalachian Trail</li>
