--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <!-- Icon images from icon8.com -->
                 <ul class="nav" id = "nav-ul">
                     <li class="nav"><a href="https://github.com/QPThree"><img src="./images/github.png" height= "25px" width="25px"></a></li>
-                    <li class="nav"><a href="https://www.linkedin.com/in/quentin-young-iii/"><img src="./images/linkedin.png" height= "25px" width="25px"></a></li>
-                    <li class="nav"><a href="https://www.instagram.com/"><img src="./images/instagram.png" height= "25px" width="25px"></a></li>
-                    <li class="nav"><a href="https://www.twitter.com/"><img src="./images/twitter.png" height= "25px" width="25px"></a></li>
+                    <li class="nav"><a href="https://www.linkedin.com/in/quentin-young-iii/"><img src="./img/linkedin.png" height= "25px" width="25px"></a></li>
+                    <li class="nav"><a href="https://www.instagram.com/"><img src="./img/instagram.png" height= "25px" width="25px"></a></li>
+                    <li class="nav"><a href="https://www.twitter.com/"><img src="./img/twitter.png" height= "25px" width="25px"></a></li>
                 </ul>
             </nav>
     </header>
