--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
             </nav>
     </header>
     <main class = "main-container">
-        <div class = "left-container"><!--Remains Empty--></div>
+        <div class = "left-container">
+            <h2 class="nfl">Top 10 Best NFL Draft Picks (2021)</h2>
+                <ol class="nfl">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ol>
+        </div>
         <div class = "center-container">
             <div class = "main-item" id="container-1">
                 <h2 id = "greeting"> <script> document.write(greeting())</script></h2>
@@ -62,13 +76,13 @@
                     <li>Long - Through-hike the Appalachian Trail</li>
                 </ul>
             </div>
+            
             <div id = "displayResults"></div>
             <div class = "main-item" id="container-6">
                 <button onclick="quizGame()">
                 <h2>Click For Quiz!</h2>
                 </button>
             </div>
-            
         </div>
     </div>
     </main>
