updated questions 6 and 7 in js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     </header>
     <main class = "main-container">
         <div class = "left-container">
-            <h2 class="nfl">Top 10 Best NFL Draft Picks (2021)</h2>
+            <h2 class="nfl">Best 2021 NFL Draft Picks</h2>
+            <br>
                 <ol class="nfl">
                     <li></li>
                     <li></li>
