formattined page via index and css

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     </header>
     <main class = "main-container">
         <div class = "left-container">
-            <h2 class="nfl">Best 2021 NFL Draft Picks</h2>
+            <h2 class="nfl" id = "nflh2">Best 2021 NFL Draft Picks</h2>
             <br>
                 <ol class="nfl">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Kyle Pitts - <i>ATL</i></li>
+                    <li>Trevor Lawrence - <i>JAX</i></li>
+                    <li>Penei Sewell - <i>DET</i></li>
+                    <li>Justin Fields - <i>CHI</i></li>
+                    <li>Micah Parsons - <i>DAL</i></li>
+                    <li>Rashawn Slater - <i>LAC</i></li>
+                    <li>Mac Jones - <i>NE</i></li>
+                    <li>Caleb Farley - <i>TEN</i></li>
+                    <li>Christian Darrisaw - <i>MIN</i></li>
+                    <li>Rashod Bateman - <i>BAL</i></li>
                 </ol>
         </div>
         <div class = "center-container">
