--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <h2 class="nfl" id = "nflh2">Best 2021 NFL Draft Picks</h2>
             <br>
                 <ol class="nfl">
-                    <li>Kyle Pitts - <i>ATL</i></li>
-                    <li>Trevor Lawrence - <i>JAX</i></li>
-                    <li>Penei Sewell - <i>DET</i></li>
-                    <li>Justin Fields - <i>CHI</i></li>
-                    <li>Micah Parsons - <i>DAL</i></li>
-                    <li>Rashawn Slater - <i>LAC</i></li>
-                    <li>Mac Jones - <i>NE</i></li>
-                    <li>Caleb Farley - <i>TEN</i></li>
-                    <li>Christian Darrisaw - <i>MIN</i></li>
-                    <li>Rashod Bateman - <i>BAL</i></li>
+                    <li>Kyle Pitts - ATL</li>
+                    <li>Trevor Lawrence - JAX</li>
+                    <li>Penei Sewell - DET</li>
+                    <li>Justin Fields - CHI</li>
+                    <li>Micah Parsons - DAL</li>
+                    <li>Rashawn Slater - LAC</li>
+                    <li>Mac Jones - NE</li>
+                    <li>Caleb Farley - TEN</li>
+                    <li>Christian Darrisaw - MIN</li>
+                    <li>Rashod Bateman - BAL</li>
                 </ol>
         </div>
         <div class = "center-container">
