updated top 10 to be ski resorts

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     </header>
     <main class = "main-container">
         <div class = "left-container">
-            <h2 class="nfl" id = "nflh2">Best 2021 NFL Draft Picks</h2>
+            <h2 class="nfl" id = "nflh2">Quen's Top 10 To Ski</h2>
             <br>
                 <ol class="nfl">
-                    <li>Kyle Pitts - ATL</li>
-                    <li>Trevor Lawrence - JAX</li>
-                    <li>Penei Sewell - DET</li>
-                    <li>Justin Fields - CHI</li>
-                    <li>Micah Parsons - DAL</li>
-                    <li>Rashawn Slater - LAC</li>
-                    <li>Mac Jones - NE</li>
-                    <li>Caleb Farley - TEN</li>
-                    <li>Christian Darrisaw - MIN</li>
-                    <li>Rashod Bateman - BAL</li>
+                    <li>Stowe - VT</li>
+                    <li>Mount Snow - VT</li>
+                    <li>Park City - UT</li>
+                    <li>Okemon - VT</li>
+                    <li>Solitude Mtn - UT</li>
+                    <li>Mount Sunapee - NH</li>
+                    <li>Bretton Woods - NH</li>
+                    <li>Killington - VT</li>
+                    <li>Smugglers Notch- VT</li>
+                    <li>Jay Peak - VT</li>
                 </ol>
         </div>
         <div class = "center-container">
