turned quiz into one function.  added on-click to start quiz

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             
             <div id = "displayResults"></div>
             <div class = "main-item" id="container-6">
-                <button onclick="quizGame()">
+                <button onclick="fullQuiz()">
                 <h2>Click For Quiz!</h2>
                 </button>
             </div>
